## Process this file with automake to produce Makefile.in

Migrationsdir = @DATADIR@/ebox-egroupware/migration

nobase_Migrations_SCRIPTS = 0001_add_bookmarks_application.pl \
                            0002_upgrade_from_1_4_to_1_6.pl \
                            0003_add_new_applications.pl

EXTRA_DIST = $(nobase_Migrations_SCRIPTS)

MAINTAINERCLEANFILES = Makefile.in

