## Process this file with automake to produce Makefile.in

pkgdata_SCRIPTS =  ebox-init-egroupware ebox-egroupware-enable ebox-egroupware-set-vdomain ebox-egroupware-install-all-languages ebox-egroupware-set-languages ebox-egroupware-backup ebox-egroupware-regen-db ebox-egroupware-setup

MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(pkgdata_SCRIPTS)
